Explain each field

--- a/app/views/ucas/apply-preferences.html
+++ b/app/views/ucas/apply-preferences.html
@@ -23,7 +23,7 @@
       <form action="/" method="post">
         <h2 class="govuk-heading-l">Who UCAS will contact</h2>
 
-        <p>UCAS don’t have permission to share the contact details you gave them in web-link with the Becoming a Teacher team. To find out those details contact the UCAS HEP Team on 0344 984 1111, or at <a href="#">hep_team@ucas.ac.uk</a>.</p>
+        <p>UCAS don’t have permission to share your contact details with us. To get hold of these details yourself, contact the UCAS HEP Team on 0344 984 1111 or at <a href="#">hep_team@ucas.ac.uk</a>.</p>
 
         <p>Alternatively, you can choose new contacts below.</p>
 
@@ -33,7 +33,9 @@
               UCAS correspondent
             </dt>
             <dd class="govuk-summary-list__value">
-              Unknown
+              Information unknown
+              <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
+              <p class="govuk-body-s" style="color: #777">They receive the UCAS monthly bulletin, which will include information about deadlines for making decisions.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="/ucas/ucas-correspondent">
@@ -46,7 +48,9 @@
               Application alerts contact
             </dt>
             <dd class="govuk-summary-list__value">
-              Unknown
+              Information unknown
+              <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
+              <p class="govuk-body-s" style="color: #777">They receive new application alerts if you’ve enabled them.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
@@ -59,7 +63,9 @@
               GT12 reply email or URL
             </dt>
             <dd class="govuk-summary-list__value">
-              Unknown
+              Information unknown
+              <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
+              <p class="govuk-body-s" style="color: #777">They receive responses from successful applicants replying to a GT12 letter.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
@@ -72,7 +78,9 @@
               web-link correspondent
             </dt>
             <dd class="govuk-summary-list__value">
-              Unknown
+              Information unknown
+              <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
+              <p class="govuk-body-s" style="color: #777">They receive notices about UCAS systems and planned downtime.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
@@ -85,7 +93,11 @@
               Finance contact
             </dt>
             <dd class="govuk-summary-list__value">
-              Unknown
+              Jane Doe<br />
+              jane.doe@myscitt.org.uk<br />
+              07912345678
+              <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
+              <p class="govuk-body-s" style="color: #777">They receive invoices from UCAS for payment of fees</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
@@ -98,7 +110,9 @@
               Fraud contact
             </dt>
             <dd class="govuk-summary-list__value">
-              Unknown
+              Information unknown
+              <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
+              <p class="govuk-body-s" style="color: #777">They receive alerts about fradulent activity, for example similarity detection for a plagiarised personal statement.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
