--- a/app/views/ucas/apply-preferences.html
+++ b/app/views/ucas/apply-preferences.html
@@ -21,7 +21,7 @@
       <hr class="govuk-section-break govuk-section-break--l" />
 
       <form action="/" method="post">
-        <h2 class="govuk-heading-l">Who UCAS will contact</h2>
+        <h2 class="govuk-heading-l">Who will UCAS contact?</h2>
 
         <p>UCAS don’t have permission to share your contact details with us. To get hold of these details yourself, contact the UCAS HEP Team on 0344 984 1111 or at <a href="#">hep_team@ucas.ac.uk</a>.</p>
 
