Tweak UCAS contacts text

--- a/app/views/ucas/apply-preferences.html
+++ b/app/views/ucas/apply-preferences.html
@@ -35,7 +35,7 @@
             <dd class="govuk-summary-list__value">
               Information unknown
               <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
-              <p class="govuk-body-s" style="color: #777">They receive the UCAS monthly bulletin, which will include information about deadlines for making decisions.</p>
+              <p class="govuk-body-s" style="color: #777">This person will receive the UCAS monthly bulletin, which will include information about deadlines for making decisions.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="/ucas/ucas-correspondent">
@@ -50,7 +50,7 @@
             <dd class="govuk-summary-list__value">
               Information unknown
               <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
-              <p class="govuk-body-s" style="color: #777">They receive new application alerts if you’ve enabled them.</p>
+              <p class="govuk-body-s" style="color: #777">This person will receive new application alerts if you’ve enabled them.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
@@ -65,7 +65,7 @@
             <dd class="govuk-summary-list__value">
               Information unknown
               <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
-              <p class="govuk-body-s" style="color: #777">They receive responses from successful applicants replying to a GT12 letter.</p>
+              <p class="govuk-body-s" style="color: #777">This person will receive responses from successful applicants replying to a GT12 letter.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
@@ -80,7 +80,7 @@
             <dd class="govuk-summary-list__value">
               Information unknown
               <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
-              <p class="govuk-body-s" style="color: #777">They receive notices about UCAS systems and planned downtime.</p>
+              <p class="govuk-body-s" style="color: #777">This person will receive notices about UCAS systems and planned downtime.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
@@ -97,7 +97,7 @@
               jane.doe@myscitt.org.uk<br />
               07912345678
               <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
-              <p class="govuk-body-s" style="color: #777">They receive invoices from UCAS for payment of fees</p>
+              <p class="govuk-body-s" style="color: #777">This person will receive invoices from UCAS for payment of fees</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
@@ -112,7 +112,7 @@
             <dd class="govuk-summary-list__value">
               Information unknown
               <hr class="govuk-section-break govuk-section-break--s govuk-!-margin-top-2">
-              <p class="govuk-body-s" style="color: #777">They receive alerts about fradulent activity, for example similarity detection for a plagiarised personal statement.</p>
+              <p class="govuk-body-s" style="color: #777">This person will receive alerts about fradulent activity, for example similarity detection for a plagiarised personal statement.</p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a href="#">
