--- a/app/views/ucas/_gt12.html
+++ b/app/views/ucas/_gt12.html
@@ -5,7 +5,7 @@
   <div class="status-box" style="border: none">
     <p>
       To confirm whether or not you intend to take up this place,
-      you must contact the training provider at [GT12 reply email
+      you must contact the training provider at [email address
       or URL].
     </p>
     <p>
@@ -40,3 +40,12 @@
 %}
 
 {{ macros.radioGroup('ucas-gt12', fields) }}
+
+<hr class="govuk-section-break govuk-section-break--l">
+<h2 class="govuk-heading-l">Who will applicants reply to?</h2>
+<p>If applicants must confirm their place you need to give an email address or URL for them to use.</p>
+
+{{ macros.textbox('gt12-reply-to', 'Email address (or URL) to be printed in the letter')}}
+{{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to share this email (or URL) with UCAS' }], false) }}
+
+<hr class="govuk-section-break govuk-section-break--l">
