--- a/app/views/ucas/fraud-contact.html
+++ b/app/views/ucas/fraud-contact.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'UCAS teacher training correspondent' %}
+{% set title = 'Fraud contact' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink('/ucas/apply-preferences') }}{% endblock %}
 
@@ -10,11 +10,11 @@
 
   <div class="govuk-grid-row add-top-margin">
     <div class="govuk-grid-column-two-thirds">
-      <p>This person will receive the UCAS monthly bulletin, which will include information about deadlines for making decisions.</p>
+      <p>This person will receive alerts about fradulent activity, for example similarity detection for a plagiarised personal statement.</p>
 
-      {{ macros.textbox('lead-contact-name', 'Name') }}
-      {{ macros.textbox('lead-contact-email', 'Email address') }}
-      {{ macros.textbox('lead-contact-telephone', 'Telephone number', false, 'govuk-input--width-10') }}
+      {{ macros.textbox('fraud-contact-name', 'Name') }}
+      {{ macros.textbox('fraud-contact-email', 'Email address') }}
+      {{ macros.textbox('fraud-contact-telephone', 'Telephone number', false, 'govuk-input--width-10') }}
       {{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to share this information with UCAS' }], false) }}
 
       <form action="/ucas/apply-preferences" method="post">
