--- a/app/views/ucas/ucas-correspondent.html
+++ b/app/views/ucas/ucas-correspondent.html
@@ -10,14 +10,14 @@
 
   <div class="govuk-grid-row add-top-margin">
     <div class="govuk-grid-column-two-thirds">
-      <p>This person will receive the UCAS monthly bulletin, which will include information about deadlines for making decisions.</p>
-
-      {{ macros.textbox('lead-contact-name', 'Name') }}
-      {{ macros.textbox('lead-contact-email', 'Email address') }}
-      {{ macros.textbox('lead-contact-telephone', 'Telephone number', false, 'govuk-input--width-10') }}
-      {{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to share this information with UCAS' }], false) }}
-
       <form action="/ucas/apply-preferences" method="post">
+        <p>This person will receive the UCAS monthly bulletin, which will include information about deadlines for making decisions.</p>
+
+        {{ macros.textbox('utt-contact-name', 'Name') }}
+        {{ macros.textbox('utt-contact-email', 'Email address') }}
+        {{ macros.textbox('utt-contact-telephone', 'Telephone number', false, 'govuk-input--width-10') }}
+        {{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to share this information with UCAS' }], false) }}
+
         <div class="form-group add-double-bottom-margin">
           <input type="submit" class="govuk-button" value="Save">
         </div>
