--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -257,6 +257,15 @@ dl.aligned.course-part-tasks dd {
   max-width: 295px;
 }
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  display: inline-block;
+  margin-bottom: -8px;
+}
+
 .govuk-heading-27 {
   @include govuk-font(27, $weight: bold);
 }
