Fix bug in cycle page context

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -49,7 +49,7 @@
               iconFallbackText: 'Warning'
           }) }}
         </div>
-      {% elseif nextCycle %}
+      {% elseif data['next-cycle'] %}
         <p class="govuk-body-l">Prepare your courses and locations for the next cycle. All your courses, locations and details have been copied from the current cycle.</p>
         <hr class="govuk-section-break govuk-section-break--m">
       {% else %}
