--- a/app/views/course/delete.html
+++ b/app/views/course/delete.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
-{% set title = 'Delete this course' %}
+{% set title = 'Are you sure you want to delete this course?' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(course.path) }}{% endblock %}
 
 {% block content %}
-  <h1 class="govuk-heading-xl">
-    <span class="govuk-caption-xl">{{ course.name | safe }} ({{ course.programmeCode }})</span>
-    {{ title }}
-  </h1>
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">
+        <span class="govuk-caption-xl">{{ course.name | safe }} ({{ course.programmeCode }})</span>
+        {{ title }}
+      </h1>
+
       <form action="{{ course.path }}/delete" method="post">
         <p>You can only delete a course if it hasn’t been published in this cycle.</p>
 
