Update buttons as reponse to ‘Are you sure?‘

--- a/app/views/course/delete.html
+++ b/app/views/course/delete.html
@@ -30,7 +30,7 @@
 
         <hr class="govuk-section-break govuk-section-break--m">
 
-        <input type="submit" class="govuk-button destructive-button" value="Delete course" />
+        <input type="submit" class="govuk-button destructive-button" value="Yes I’m sure – delete this course" />
 
         <p class="govuk-!-margin-top-5">
           <a href="{{ course.path }}">Cancel</a>
