--- a/app/views/course/withdraw.html
+++ b/app/views/course/withdraw.html
@@ -57,7 +57,7 @@
 
         <hr class="govuk-section-break govuk-section-break--m">
 
-        <input type="submit" class="govuk-button destructive-button" value="Withdraw course" />
+        <input type="submit" class="govuk-button destructive-button" value="Yes I’m sure – withdraw this course" />
 
         <p class="govuk-!-margin-top-5">
           <a href="{{ course.path }}">Cancel</a>
